config/aws-efs/manifests/stable/network-policy-allow-to-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aws-efs-allow-to-dns
spec:
  podSelector:
    matchLabels:
      openshift.storage.aws-efs.network-policy.dns: allow
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353
  policyTypes:
  - Egress
